# backend_module02_project

./: .gitignore  README.md  app.py  config.py  flask_app.py  project_tree.txt  pyproject.toml  repair_shop_db.postman_collection.json  repair_shop_db.postman_environment.json  requirements.txt
.github/workflow/: main.yaml
.github/workflows/: code-quality.yaml  deprecated.yaml  main.yaml
.github/workflows/actions/setup/: action.yaml
app/: __init__.py  extensions.py  models.py
app/blueprints/customer/: __init__.py  routes.py  schemas.py
app/blueprints/inventory/: routes.py  schemas.py
app/blueprints/mechanics/: routes.py  schemas.py
app/blueprints/service_tickets/: routes.py  schemas.py
app/static/: swagger.yaml
app/utils/: util.py
tests/: test_customer.py  test_inventory.py  test_mechanics.py  test_service_tickets.py
